[package]
name = "bustools_cli"
version = "0.5.1"
edition = "2021"
license = " GPL-3.0-or-later"
description = "Rust reimplementation of bustools for scRNAseq processing"
homepage = "https://github.com/redst4r/bustools_cli-rs"
repository = "https://github.com/redst4r/bustools_cli-rs"
keywords = ["scrnaseq", "kallisto", "bus", "single-cell", "rnaseq"]
categories = ["science"]
readme = "README.md"
include = ["/src", "README.md"]


[dependencies]
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
sprs = "0.11"
statrs = "0.17"
rand = "0.8"
probability="0.20"  # for faster Binomial Sampling, using inverse pdf
itertools="0.13"
tempfile="3.10"
bktree="1"
# bustools = { path = "/home/michi/Dropbox/rustbustools" }
bustools ="0.14"
#pyo3 = "0.20.0"  # testing CUHistogram conversion

[dev-dependencies]
criterion = "0.5"
ndarray="0.15.6"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"
